@@ -30,7 +30,7 @@ public class Users {
     private static String bytesToHex(byte[] bytes) {
         StringBuilder sb = new StringBuilder();
         for (byte b : bytes) {
-            sb.append(String.format("%02x", b));
+            sb.append("%02x".formatted(b));
         }
         return sb.toString();
     }
